--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <div class="segment__stats__item">
                                 <h4 class="segment__stats__item__title">Distanse</h4>
                                 <p class="segment__stats__item__stat vr-type-2">45,91 km</p>
-                            </div>
+                            </div> 
                             <div class="segment__stats__item">
                                 <h4 class="segment__stats__item__title">Stigning</h4>
                                 <p class="segment__stats__item__stat vr-type-2">1 742 m</p>
@@ -217,8 +217,13 @@
             <header class="site-section__header">
                 <h1 class="site-section__header__title">Scoreboard</h1>
             </header>
-            <p class="leaderboards__ingress">Under ser du en oversikt over de raskeste løperne i Lillo BlazeCup2020. Denne lista blir manuelt oppdatert, så dersom du ikke ser navnet ditt umiddelbart etter at du har løpt inn til en vinnertid må du smøre det inn med noen minutters tålmodighet. </p>
-            <h3>Blaze Cup Overall</h3>
+            <p class="leaderboards__ingress">
+                Under ser du en oversikt over de raskeste løperne i Lillo BlazeCup2020. 
+                Denne lista blir manuelt oppdatert, så dersom du ikke ser navnet ditt umiddelbart etter at du har løpt inn til en vinnertid må du smøre det inn med noen minutters tålmodighet. 
+                For øyeblikket har ingen rukket å løpe alle tre rutene, så vi starter med å vise Stirsdag Classic-segmentet. 
+                Resultater og scoreboard blir oppdatert fortløpende.
+            </p>
+            <h3>Stirsdag Classic</h3>
             <table class="leaderboards__table">
               <thead>
                 <tr>
@@ -230,60 +235,18 @@
               <tbody>
                 <tr>
                   <td>👑</td>
-                  <td>Baby Jesus</td>
-                  <td>200</td>
+                  <td>Patrick Stangbye</td>
+                  <td>57.02</td>
                 </tr>
                 <tr>
                   <td>2</td>
-                  <td>Shake and bake</td>
-                  <td>190</td>
+                  <td>Hans Kristian Smedsrød</td>
+                  <td>57.45</td>
                 </tr>
               </tbody>
             </table>
-            <h3>Kvinner</h3>
-            <table class="leaderboards__table">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Navn</th>
-                  <th>Poeng</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>👸</td>
-                  <td>Mary, the Slut</td>
-                  <td>200</td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Shake and bake</td>
-                  <td>190</td>
-                </tr>
-              </tbody>
-            </table>
-            <h3>Menn</h3>
-            <table class="leaderboards__table">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Navn</th>
-                  <th>Poeng</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>🤴</td>
-                  <td>Baby Jesus</td>
-                  <td>200</td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Shake and bake</td>
-                  <td>190</td>
-                </tr>
-              </tbody>
-            </table>
+            
+            
         </section>
         <footer id="footer" class="footer">
             <div class="footer__inner">
