--- a/index.html
+++ b/index.html
@@ -243,6 +243,11 @@
                   <td>Hans Kristian Smedsrød</td>
                   <td>57.45</td>
                 </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Truls Dahlsveen</td>
+                    <td>65.09</td>
+                  </tr>
               </tbody>
             </table>
             
