--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               </tbody>
             </table>
 
-            <h3>Stirsdag Classic</h3>
+            <h3>Lillomarka Rundt</h3>
             <table class="leaderboards__table">
               <thead>
                 <tr>
