--- a/index.html
+++ b/index.html
@@ -219,9 +219,7 @@
             </header>
             <p class="leaderboards__ingress">
                 Under ser du en oversikt over de raskeste løperne i Lillo BlazeCup2020. 
-                Denne lista blir manuelt oppdatert, så dersom du ikke ser navnet ditt umiddelbart etter at du har løpt inn til en vinnertid må du smøre det inn med noen minutters tålmodighet. 
-                For øyeblikket har ingen rukket å løpe alle tre rutene, så vi starter med å vise Stirsdag Classic-segmentet. 
-                Resultater og scoreboard blir oppdatert fortløpende.
+                Lista blir manuelt oppdatert, så dersom du ikke ser navnet ditt umiddelbart etter at du har løpt inn til en vinnertid må du smøre det inn med tålmodighet.
             </p>
             <h3>Stirsdag Classic</h3>
             <table class="leaderboards__table">
