--- a/index.html
+++ b/index.html
@@ -275,18 +275,25 @@
                     <td>63,7</td>
                   </tr>
                 <tr>
+                <tr>
                     <td>3</td>
+                    <td>Inger Aaberg</td>
+                    <td>71</td>
+                </tr>
+                
+                <tr>
+                    <td>4</td>
                     <td>Bjørnar Liaskar</td>
                     <td>80,6</td>
                 </tr>
                 <tr>
-                    <td>4</td>
+                    <td>5</td>
                     <td>Birte Mari Steen</td>
                     <td>110,0</td>
                 </tr>
                 
                 <tr>
-                    <td>5</td>
+                    <td>6</td>
                     <td>Henrik Kvisgaard</td>
                     <td>105,5</td>
                 </tr>
